Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100883

qmlcachegen miscompiles QVariant of QObject* to bool conversion

XMLWordPrintable

    • d0f4e0c037 (qt/qtdeclarative/dev) d0f4e0c037 (qt/tqtc-qtdeclarative/dev) 8ad4d971a8 (qt/tqtc-qmlcompilerplus/6.2) 82d9d8ec44 (qt/qtdeclarative/6.3)

      See https://codereview.qt-project.org/c/qt/qtvirtualkeyboard/+/395739

      It uses qvariant_cast<bool>(var), and that always returns false no matter if there is a nullptr or an actual object in the variant. We should not try to compile such code to C++.

        For Gerrit Dashboard: QTBUG-100883
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: